# CadWithAgent

./: .env.example  .gitignore  API_REFERENCE.md  ARCHITECTURE.md  CODE_QUALITY_FIXES_2026_04_06.md  CONTRIBUTING.md  Cargo.toml  DOCUMENTATION_CONSOLIDATION_REPORT.md  GETTING_STARTED.md  IMPLEMENTATION_COMPLETE.md  IMPLEMENTATION_VERIFICATION.md  PERFORMANCE.md  PERFORMANCE_BENCHMARKS.md  PHASE_3_TASK_1_REPORT.md  PHASE_3_TASK_2_REPORT.md  PHASE_8_PROGRESS.md  PROBLEM_SOLVING_REPORT.md  PROJECT_CRITICAL_REVIEW.md  PROJECT_REVIEW_2026_04_06.md  README.en.md  README.md  REFACTORING_SUMMARY.md  RESEARCH_GUIDE.md  SECURITY_AUDIT_CHECKLIST.md  TODO_FIXME_REPORT_2026_04_06.md  WEB_UI_GUIDE.md  justfile  todo.json
.cad_context/branches/main/: branch.json  hash_chain.json
.cad_context/graph/: graph.json
.cad_context/semantic_index/: semantic_index.json
.github/workflows/: ci.yml  experiment_tests.yml
.qwen/: settings.json  settings.json.orig
benches/: constraint_bench.rs  geometry_bench.rs  incremental_bench.rs  large_scale_bench.rs  metrics_bench.rs  nurbs_bench.rs  reasoning_bench.rs  tokitai_context_bench.rs  verifier_bench.rs
config/: default.json  templates.json
data/svg_to_png_converter/: Cargo.toml
data/svg_to_png_converter/src/: main.rs
doc/: RESEARCH_DIRECTIONS.md  improvement_plan.json  target_plan.json  thinking_chain_plan.json
docs/: DOCUMENTATION_INDEX.md  DOCUMENTATION_REORGANIZATION_REPORT.md
docs/archive/: AI_AUTONOMY_GAP_ANALYSIS.md  AI_OPTIMIZATION_RECOMMENDATIONS.md  AUTONOMOUS_CAD_IMPLEMENTATION_PLAN.md  CODE_QUALITY_IMPROVEMENT_2026_04_06.md  GPU_OPTIMIZATION_REPORT_2026_04_06.md  GPU_TEST_FIX_REPORT_2026_04_06.md  IGES_ENHANCEMENT_2026_04_06.md  IMPLEMENTATION_STATUS.md  OPTIMIZATION_REPORT_2026_04_06.md  OPTIMIZATION_SUMMARY.md  OPTIMIZATION_SUMMARY_2026_04_06.md  PERFORMANCE_OPTIMIZATION.md  PRODUCT_POSITIONING.md  TOKITAI_CONTEXT_ANALYSIS.md  TOKITAI_CONTEXT_EXAMPLES.md  TOKITAI_CONTEXT_INTEGRATION_PLAN.md  TOKITAI_CONTEXT_INTEGRATION_SUMMARY.md
examples/: advanced_geometry.rs  basic_usage.rs  context_injection.rs  context_usage.rs  cot_generation.rs  geometry_llm_cooperation.rs  pipeline.rs  step_parsing.rs  test_api_call.rs  test_env.rs  test_request_format.rs  vlm_inference.rs
results/: report.md
scripts/: check_wgsl.sh  evaluate.py
shaders/: distance.wgsl  jacobian.wgsl  normal.wgsl  tessellate.wgsl  transform.wgsl
src/: error.rs  lib.rs  main.rs  web_server.rs
src/analysis/: closed_region_detector.rs  geometry_pipeline_trait.rs  mod.rs  pipeline.rs  tools.rs  types.rs
src/bridge/: mod.rs  serializer.rs  vlm_client.rs  zaza_client.rs
src/cad_extractor/: mod.rs
src/cad_reasoning/: mod.rs  relation_text.rs
src/cad_verifier/: mod.rs  report.rs
src/config/: mod.rs  validation.rs
src/context/: backend.rs  dialog_state.rs  error_library_legacy.rs  mock_llm.rs  mod.rs  task_planner.rs  utils.rs
src/context/ai/: mod.rs
src/context/branch/: mod.rs
src/context/dialog_memory/: mod.rs
src/context/error_library/: learning.rs  manager.rs  mod.rs  query.rs  recommender.rs  types.rs
src/context/merge/: mod.rs
src/context/task/: executor.rs  mod.rs  plan.rs  types.rs
src/cot/: generator.rs  mod.rs  qa.rs  templates.rs  validator.rs
src/export/: dxf.rs  dxf_tests.rs  json.rs  json_tests.rs  mod.rs
src/feature/: feature.rs  feature_tree.rs  mod.rs
src/geometry/: boolean.rs  boolean_tests.rs  constraint.rs  constraint3d.rs  constraint_sparse.rs  generic_solver.rs  geometry_cache.rs  geometry_error.rs  measure.rs  measure_tests.rs  mod.rs  numerics.rs  nurbs.rs  parametric.rs  primitives.rs  prop_tests.rs  simd.rs  soa.rs  transform.rs  transform_tests.rs
src/gpu/: buffers.rs  compute.rs  mod.rs  nurbs.rs  renderer.rs
src/incremental/: change_tracker.rs  dependency_graph.rs  mod.rs  updater.rs
src/llm_reasoning/: engine.rs  mod.rs  types.rs
src/lod/: lod_manager.rs  mod.rs  simplification.rs
src/memory/: arena.rs  mod.rs  pool.rs
src/metrics/: consistency.rs  evaluator.rs  iou.rs  mod.rs
src/parser/: dxf.rs  iges.rs  mod.rs  parser_common.rs  step.rs  svg.rs
src/prompt_builder/: mod.rs
src/tools/: macros.rs  mod.rs  registry.rs
src/topology/: door_window.rs  loop_detect.rs  mod.rs  room_detect.rs  topology_tests.rs
tests/: analysis_integration_test.rs  autonomous_decision_test.rs  benchmark_suite.rs  cad_reasoning_tests.rs  context_integration_test.rs  cubicasa_tokitai_integration_test.rs  error_learning_test.rs  experiment_test.rs  geometry_tests.rs  gpu_benchmark_test.rs  integration_tests.rs  llm_local_models_test.rs  llm_reasoning_test.rs  svg_geometry_extraction_test.rs  tokitai_llm_geometry_test.rs  zazaz_client_test.rs
tests/experiment/: README.md  assertion_utils.rs  config.rs  config.toml  cubicasa5k.rs  error.rs  exp1_accuracy.rs  exp2_performance.rs  exp3_vlm_reasoning.rs  exp4_ablation.rs  exp5_case_studies.rs  exp6_comparison.rs  latex_tables.rs  metrics.rs  mod.rs  parallel.rs  reproducibility.rs  runner.rs  statistics.rs  utils.rs  validity_threats.rs  venue_configs.rs  visualization.rs
tests/experiment/data/: mod.rs
tests/experiment/fixtures/: mod.rs
tests/experiment/results/: ablation_study_result.json  (+7 more)
tests/fixtures/: floor_plan_ground_truth.json  simple_room_ground_truth.json
web-ui/: .env.example  .gitignore  README.md  index.html  package.json
web-ui/src/: App.tsx  types.ts
(+11 files in other folders)
